.metadata/.plugins/org.eclipse.cdt.ui/templBoostDimensions.build.log
14:13:58 **** Build of configuration Debug for project templBoostDimensions ****
make all 
Building file: ../src/templBoostDimensions.cpp
Invoking: GCC C++ Compiler
g++ -std=c++11 -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/templBoostDimensions.d" -MT"src/templBoostDimensions.d" -o "src/templBoostDimensions.o" "../src/templBoostDimensions.cpp"
In file included from ../src/templBoostDimensions.cpp:16:0:
../src/templBoostDimensions.cpp: In function ‘int main()’:
../src/templBoostDimensions.cpp:56:2: error: expected primary-expression before ‘enum’
  BOOST_MPL_ASSERT ( true  );
  ^
../src/templBoostDimensions.cpp:56:2: error: expected ‘;’ before ‘enum’
make: *** [src/templBoostDimensions.o] Error 1

14:13:59 Build Finished (took 586ms)

